ログイン部分をDSLに記述した
