# swagger/swagger.yaml
@@ -14,6 +14,23 @@ definitions:
     - body
     title: CreatePostPayload
     type: object
+  LoginAuthorizationPayload:
+    example:
+      password: testpassword
+      userid: fugafuga
+    properties:
+      password:
+        example: testpassword
+        type: string
+      userid:
+        example: fugafuga
+        maxLength: 15
+        type: string
+    required:
+    - userid
+    - password
+    title: LoginAuthorizationPayload
+    type: object
   Post:
     description: 投稿の詳細な情報を返す際のレスポンス (default view)
     example:
@@ -116,11 +133,7 @@ info:
 paths:
   /auth/new:
     post:
-      description: |-
-        新規登録
-
-        Required security scopes:
-          * `api:access`
+      description: 新規登録
       operationId: Authorization#register
       parameters:
       - in: body
@@ -155,10 +168,27 @@ paths:
             $ref: '#/definitions/error'
       schemes:
       - https
-      security:
-      - JWT:
-        - api:access
       summary: register Authorization
+      tags:
+      - Authorization
+  /auth/signature:
+    post:
+      description: ログイン
+      operationId: Authorization#login
+      parameters:
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/LoginAuthorizationPayload'
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+      schemes:
+      - https
+      summary: login Authorization
       tags:
       - Authorization
   /posts/{post_id}:
@@ -280,6 +310,8 @@ produces:
 responses:
   NoContent:
     description: No Content
+  OK:
+    description: OK
 schemes:
 - https
 securityDefinitions:
